// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: All should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-evenly",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#6C727A",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 10,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "600",
            "textAlign": "left",
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#6C727A",
          "borderRadius": 10,
          "minWidth": 26,
        },
        undefined,
      ]
    }
    testID="unread-badge-+99"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 10,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "600",
            "textAlign": "left",
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      +99
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#6C727A",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#6C727A",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-+999"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      +999
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#F5455C",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="mention-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#F38C39",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="group-mention-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#095AD2",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: DifferentMentionTypes should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-evenly",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#6C727A",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#F5455C",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="mention-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#F38C39",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="group-mention-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#F5455C",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="mention-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#095AD2",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#F5455C",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#F38C39",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-1"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: Normal should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-evenly",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#6C727A",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
        },
        {
          "backgroundColor": "#6C727A",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-+999"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      +999
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: Small should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-evenly",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#6C727A",
          "borderRadius": 10,
          "minWidth": 16,
        },
        undefined,
      ]
    }
    testID="unread-badge-9"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 10,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "600",
            "textAlign": "left",
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#6C727A",
          "borderRadius": 10,
          "minWidth": 26,
        },
        undefined,
      ]
    }
    testID="unread-badge-+99"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 10,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "600",
            "textAlign": "left",
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      +99
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: Themes should match snapshot 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#6C727A",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#F5455C",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#F38C39",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="group-mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#095AD2",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#484C51",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#B43C4C",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#955828",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="group-mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#245399",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#484C51",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#B43C4C",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#955828",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="group-mention-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "paddingHorizontal": 4,
          },
          {
            "backgroundColor": "#245399",
            "borderRadius": 10,
            "minWidth": 16,
          },
          undefined,
        ]
      }
      testID="unread-badge-1"
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
              "lineHeight": 18,
              "textAlign": "left",
            },
            undefined,
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        1
      </Text>
    </View>
  </View>,
]
`;
